syntax = "proto3";

package ASC.Core;

message SubscriptionMethodCache {
    string recipient_id  = 1;

    string action_id  = 2;

    string source_id = 3;

    repeated string methods = 4;

    int32 tenant = 5;
}